--- a/example/pubspec.yaml
+++ b/example/pubspec.yaml
@@ -70,5 +70,5 @@ flutter:
   #
   # For details regarding fonts from package dependencies,
   # see https://flutter.dev/custom-fonts/#from-packages
-  assets:
-    - .env
+#  assets:
+#    - .env
