--- a/android/build.gradle
+++ b/android/build.gradle
@@ -31,5 +31,5 @@ android {
 
 dependencies {
     implementation 'com.midtrans:uikit:1.28.0-SANDBOX'
-    releaseImplementation 'com.midtrans:uikit:1.28.0'
+    #releaseImplementation 'com.midtrans:uikit:1.28.0'
 }
